Modif et ajout liste vanilla

--- a/templates/shop/liste.html.twig
+++ b/templates/shop/liste.html.twig
@@ -20,7 +20,7 @@
 
 	<form action="{{ path('article_ajouter') }}" method="POST">
 
-		<input name="nom" placeholder="Nom article">
+		<input name="name" placeholder="Nom article">
 		<br><br>
 		<button type="submit">Ajouter</button>
 	</form>
